--- a/pom.xml
+++ b/pom.xml
@@ -51,5 +51,13 @@
 			<version>1.4.7</version>
 		</dependency>
 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12-beta-3</version>
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 </project>
