--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.usp</groupId>
 	<artifactId>metricminer</artifactId>
 	<packaging>jar</packaging>
-	<version>2.0.2-SNAPSHOT</version>
+	<version>2.0.2</version>
 	<name>metricminer2</name>
 	<url>http://www.metricminer.org.br</url>
 
@@ -33,7 +32,7 @@
 		<url>http://github.com/metricminer-msr/metricminer2</url>
 		<connection>scm:git:git://github.com/metricminer-msr/metricminer2</connection>
 		<developerConnection>scm:git:git@github.com:metricminer-msr/metricminer2.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>metricminer-2.0.2</tag>
 	</scm>
 
 	<repositories>
