--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>br.usp</groupId>
 	<artifactId>metricminer</artifactId>
 	<packaging>jar</packaging>
-	<version>2.0.2</version>
+	<version>2.0.3-SNAPSHOT</version>
 	<name>metricminer2</name>
 	<url>http://www.metricminer.org.br</url>
 
@@ -32,7 +32,7 @@
 		<url>http://github.com/metricminer-msr/metricminer2</url>
 		<connection>scm:git:git://github.com/metricminer-msr/metricminer2</connection>
 		<developerConnection>scm:git:git@github.com:metricminer-msr/metricminer2.git</developerConnection>
-		<tag>metricminer-2.0.2</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<repositories>
