--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>br.usp</groupId>
 	<artifactId>metricminer</artifactId>
 	<packaging>jar</packaging>
-	<version>2.4.0</version>
+	<version>2.4.0-SNAPSHOT</version>
 	<name>metricminer2</name>
 	<url>http://www.metricminer.org.br</url>
 	<description>Framework for researchers in MSR</description>
