--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>br.usp</groupId>
 	<artifactId>metricminer</artifactId>
 	<packaging>jar</packaging>
-	<version>2.4.1-SNAPSHOT</version>
+	<version>2.4.1</version>
 	<name>metricminer2</name>
 	<url>http://www.metricminer.org.br</url>
 	<description>Framework for researchers in MSR</description>
@@ -33,7 +33,7 @@
 		<url>http://github.com/mauricioaniche/metricminer2</url>
 		<connection>scm:git:git://github.com/mauricioaniche/metricminer2</connection>
 		<developerConnection>scm:git:git@github.com:mauricioaniche/metricminer2.git</developerConnection>
-	  <tag>HEAD</tag>
+	  <tag>metricminer-2.4.1</tag>
   </scm>
 
 	<repositories>
