--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	<groupId>br.usp</groupId>
 	<artifactId>metricminer</artifactId>
 	<packaging>jar</packaging>
-	<version>2.4.2-SNAPSHOT</version>
+	<version>2.5.0-SNAPSHOT</version>
 	<name>metricminer2</name>
-	<url>http://www.metricminer.org.br</url>
+	<url>http://github.com/mauricioaniche/metricminer2</url>
 	<description>Framework for researchers in MSR</description>
 
 	<licenses>
@@ -21,7 +21,7 @@
 			<id>mauricioaniche</id>
 			<name>Mauricio Aniche</name>
 			<email>mauricioaniche@gmail.com</email>
-			<organization>University of Sao Paulo</organization>
+			<organization>Delft University of Technology</organization>
 			<roles>
 				<role>developer</role>
 			</roles>
