--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 before_install:
- - chmod +x ./test-repos/unpack-travis.sh
+ - chmod +x test-repos/unpack-travis.sh
 jdk:
   - oraclejdk8
-script: ./test-repos/unpack-travis.sh
+script: test-repos/unpack-travis.sh
 
