zip file for svn && getting back one dir in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 before_install:
- - cd test-repos && unzip \*.zip
+ - cd test-repos && unzip \*.zip && cd ..
 jdk:
   - oraclejdk8
 
