--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
+test-repos/svn-1
 test-repos/git-*/
-test-repos/git-3/
-test-repos/git-1/
-test-repos/git-2/
-src/test/resources/repo-1.txt
-src/test/resources/repo-1
 bin/
 target/
 *.class
