--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>org.repodriller</groupId>
 	<artifactId>repodriller</artifactId>
 	<packaging>jar</packaging>
-	<version>1.3.1</version>
+	<version>1.3.2-SNAPSHOT</version>
 	<name>repodriller</name>
 	<url>http://github.com/mauricioaniche/repodriller</url>
 	<description>Framework for researchers in MSR</description>
@@ -33,7 +33,7 @@
 		<url>http://github.com/mauricioaniche/repodriller</url>
 		<connection>scm:git:git://github.com/mauricioaniche/repodriller</connection>
 		<developerConnection>scm:git:git@github.com:mauricioaniche/repodriller.git</developerConnection>
-	  <tag>repodriller-1.3.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<repositories>
