--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
 			<version>1.8.10</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-core</artifactId>
+			<version>1.16</version>
+		</dependency>
 	</dependencies>
 
 	<distributionManagement>
