first attempt to write a test that measures memory consumption in RepoDriller

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
 before_install:
  - cd test-repos && unzip \*.zip && cd ..
+ - cd test-repos && git clone https://github.com/rails/rails.git
 jdk:
   - oraclejdk8
 
